unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Originating_Attorney__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Originating_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originating Attorney</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Matter_Originating_Attorney</relationshipName>
    <type>Lookup</type>
</CustomField>