unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Pending_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Pending_Date__c</fullName>
    <label>Pending Date</label>
    <type>Date</type>
</CustomField>