unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Practice_Area2__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Practice_Area2__c</fullName>
    <formula>TEXT(litify_pm__Case_Type__r.litify_pm__Litigation_Type__c)</formula>
    <label>Practice Area</label>
    <type>Text</type>
</CustomField>