unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Pre_Lit_Offer_Amount__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Pre_Lit_Offer_Amount__c</fullName>
    <label>Pre - Lit Offer Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>