unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Primary_Intake__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Primary_Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Intake</label>
    <referenceTo>litify_pm__Intake__c</referenceTo>
    <relationshipLabel>Matters</relationshipLabel>
    <relationshipName>Matters</relationshipName>
    <type>Lookup</type>
</CustomField>