unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Principal_Attorney__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Principal_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Principal Attorney</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Matters</relationshipName>
    <type>Lookup</type>
</CustomField>