unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Referral__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral</label>
    <referenceTo>litify_pm__Referral__c</referenceTo>
    <relationshipLabel>Matter from referral</relationshipLabel>
    <relationshipName>Matters</relationshipName>
    <type>Lookup</type>
</CustomField>