unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Retainer_Used__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Retainer_Used__c</fullName>
    <formula>litify_pm__Total_matter_cost__c/litify_pm__Total_Amount_Retained__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retainer Used %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>