unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Soft_Costs__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Soft_Costs__c</fullName>
    <label>Soft Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>