unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Source__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.litify_pm__Source_Type__c</field>
            <operation>equals</operation>
            <valueField>litify_pm__Source__c.RecordType.Name</valueField>
        </filterItems>
        <infoMessage>You can only associate Sources of the specified Source Type. Search results only display Sources of the declared type</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>litify_pm__Source__c</referenceTo>
    <relationshipLabel>Matters</relationshipLabel>
    <relationshipName>Matters</relationshipName>
    <type>Lookup</type>
</CustomField>