unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Source_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Source_Type__c</fullName>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>litify_pm__Source_Type</valueSetName>
    </valueSet>
</CustomField>