unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Starting_Matter_Stage_Override__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Starting_Matter_Stage_Override__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Starting Matter Stage Override</label>
    <referenceTo>litify_pm__Matter_Stage__c</referenceTo>
    <relationshipLabel>Starting Matter Plan Stage</relationshipLabel>
    <relationshipName>Matters</relationshipName>
    <type>Lookup</type>
</CustomField>