unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Statute_Of_Limitations__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Statute_Of_Limitations__c</fullName>
    <label>Statute of Limitations</label>
    <type>Date</type>
</CustomField>