unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Total_Amount_Billable__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Total_Amount_Billable__c</fullName>
    <formula>litify_pm__Total_Amount_Unbilled_Expenses__c + litify_pm__Total_Amount_Time_Entries_Unpaid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Billable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>