unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Total_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Total_Amount_Due__c</fullName>
    <formula>litify_pm__Total_Amount_Expensed_Due__c+ litify_pm__Total_Amount_Time_Entries_Due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>