unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Total_Amount_Expensed__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Total_Amount_Expensed__c</fullName>
    <label>Total Amount Expensed</label>
    <summarizedField>litify_pm__Expense__c.litify_pm__Amount__c</summarizedField>
    <summaryForeignKey>litify_pm__Expense__c.litify_pm__Matter__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>