unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__total_amount_paid__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__total_amount_paid__c</fullName>
    <formula>litify_pm__Total_matter_cost__c - litify_pm__Total_Amount_Due__c - litify_pm__Total_Amount_Billable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>