unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Total_Amount_Retained__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Total_Amount_Retained__c</fullName>
    <description>Roll-up summary of the Amount field on the Retainer object. This field is used to calculate the value of retainer entries logged to a matter.</description>
    <inlineHelpText>Summarizes the value of retainers logged to the matter.</inlineHelpText>
    <label>Total Amount Retained</label>
    <summarizedField>litify_pm__Retainer__c.litify_pm__Amount__c</summarizedField>
    <summaryForeignKey>litify_pm__Retainer__c.litify_pm__Matter__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>