unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Total_Amount_Time_Entries_Due__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Total_Amount_Time_Entries_Due__c</fullName>
    <label>Total Amount Time Entries Due</label>
    <summarizedField>litify_pm__Time_Entry__c.litify_pm__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>litify_pm__Time_Entry__c.litify_pm__Billed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>litify_pm__Time_Entry__c.litify_pm__Status__c</field>
        <operation>equals</operation>
        <value>Unpaid</value>
    </summaryFilterItems>
    <summaryForeignKey>litify_pm__Time_Entry__c.litify_pm__Matter__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>