unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Total_Damages__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Total_Damages__c</fullName>
    <label>Total Damages</label>
    <summarizedField>litify_pm__Damage__c.litify_pm__Amount_Billed__c</summarizedField>
    <summaryForeignKey>litify_pm__Damage__c.litify_pm__Matter__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>