unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Total_Hours__c</fullName>
    <label>Total Hours</label>
    <summarizedField>litify_pm__Time_Entry__c.litify_pm__Duration__c</summarizedField>
    <summaryForeignKey>litify_pm__Time_Entry__c.litify_pm__Matter__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>