unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Total_matter_cost__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Total_matter_cost__c</fullName>
    <formula>litify_pm__total_amount_time_entries__c + litify_pm__Total_Amount_Expensed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total cost of expenses and time entries related to matter.</inlineHelpText>
    <label>Total Matter Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>