unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Total_Matter_Value__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Total_Matter_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Matter Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>