unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Turn_Down_Details__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Turn_Down_Details__c</fullName>
    <label>Turn Down Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>