unpackaged/main/default/objects/litify_pm__Matter__c/fields/litify_pm__Use_same_client_location__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Use_same_client_location__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use same client location</label>
    <type>Checkbox</type>
</CustomField>