unpackaged/main/default/objects/litify_pm__Matter__c/fields/Merge_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Merge_Assistant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Merge Assistant Record that is used for Document Merge fields.</description>
    <inlineHelpText>Lookup to the Merge Assistant Record that is used for Document Merge fields.</inlineHelpText>
    <label>Merge Assistant</label>
    <referenceTo>Merge_Assistant__c</referenceTo>
    <relationshipLabel>Matters</relationshipLabel>
    <relationshipName>Matters</relationshipName>
    <type>Lookup</type>
</CustomField>