unpackaged/main/default/objects/litify_pm__Matter__c/fields/Minor_at_DOI__c.field-meta.xml
<CustomField>
    <fullName>Minor_at_DOI__c</fullName>
    <formula>IF(
AND(
 NOT(ISBLANK( litify_pm__Incident_date__c )),
 NOT(ISBLANK( litify_pm__Client__r.litify_pm__Date_of_birth__c )),
 ((litify_pm__Incident_date__c - litify_pm__Client__r.litify_pm__Date_of_birth__c)/365.2425)  &gt;=  18
),
&quot;FALSE&quot;,

  IF(
    AND(
     NOT(ISBLANK( litify_pm__Incident_date__c )),
     NOT(ISBLANK( litify_pm__Client__r.litify_pm__Date_of_birth__c )),
     ((litify_pm__Incident_date__c - litify_pm__Client__r.litify_pm__Date_of_birth__c)/365.2425) &lt; 18
    ),
  &quot;TRUE&quot;,
  null
  )
)</formula>
    <label>Minor at DOI</label>
    <type>Text</type>
</CustomField>