unpackaged/main/default/objects/litify_pm__Matter__c/fields/Open_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Open_Date_Text__c</fullName>
    <label>Open Date (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>