unpackaged/main/default/objects/litify_pm__Matter__c/recordTypes/litify_pm__Billable_Matter.recordType-meta.xml
<RecordType>
    <fullName>litify_pm__Billable_Matter</fullName>
    <active>true</active>
    <label>Billable Matter</label>
</RecordType>