unpackaged/main/default/objects/litify_pm__Matter__c/listViews/litify_pm__All.listView-meta.xml
<ListView>
    <fullName>litify_pm__All</fullName>
    <columns>litify_pm__lit_Display_Name_Link__c</columns>
    <columns>litify_pm__Client__c</columns>
    <columns>litify_pm__Case_Type__c</columns>
    <columns>litify_pm__Status__c</columns>
    <columns>litify_pm__Incident_date__c</columns>
    <columns>litify_pm__Statute_Of_Limitations__c</columns>
    <columns>litify_pm__Open_Date__c</columns>
    <columns>litify_pm__Principal_Attorney__c</columns>
    <columns>litify_pm__lit_Case_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>