unpackaged/main/default/objects/litify_pm__Matter__c/listViews/litify_pm__Closed_Matters.listView-meta.xml
<ListView>
    <fullName>litify_pm__Closed_Matters</fullName>
    <columns>NAME</columns>
    <columns>litify_pm__Client__c</columns>
    <columns>litify_pm__Principal_Attorney__c</columns>
    <columns>litify_pm__Case_Type__c</columns>
    <columns>litify_pm__Open_Date__c</columns>
    <columns>litify_pm__Closed_Date__c</columns>
    <columns>litify_pm__Closed_Reason__c</columns>
    <columns>litify_pm__Close_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>litify_pm__Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>Closed Matters</label>
</ListView>