unpackaged/main/default/objects/litify_pm__Matter__c/listViews/litify_pm__My_Matters.listView-meta.xml
<ListView>
    <fullName>litify_pm__My_Matters</fullName>
    <columns>litify_pm__lit_Display_Name_Link__c</columns>
    <columns>litify_pm__Client__c</columns>
    <columns>litify_pm__Case_Type__c</columns>
    <columns>litify_pm__Matter_Stage_Activity_Formula__c</columns>
    <columns>litify_pm__Status__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>litify_pm__Open_Date__c</columns>
    <columns>litify_pm__Statute_Of_Limitations__c</columns>
    <columns>litify_pm__Close_Date__c</columns>
    <columns>litify_pm__Total_Matter_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>litify_ext__IsTeamMember__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Matters</label>
</ListView>