unpackaged/main/default/objects/litify_pm__Matter__c/listViews/litify_pm__Open_Matters.listView-meta.xml
<ListView>
    <fullName>litify_pm__Open_Matters</fullName>
    <columns>litify_pm__lit_Display_Name_Link__c</columns>
    <columns>litify_pm__Client__c</columns>
    <columns>litify_pm__Case_Type__c</columns>
    <columns>litify_pm__Open_Date__c</columns>
    <columns>litify_pm__Statute_Of_Limitations__c</columns>
    <columns>litify_pm__Principal_Attorney__c</columns>
    <columns>litify_pm__Close_Date__c</columns>
    <columns>litify_pm__Total_Matter_Value__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>litify_pm__Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open Matters</label>
</ListView>