unpackaged/main/default/objects/litify_pm__Matter__c/listViews/Matters_10_Months_Not_Yet_In_Litigation.listView-meta.xml
<ListView>
    <fullName>Matters_10_Months_Not_Yet_In_Litigation</fullName>
    <columns>litify_pm__lit_Display_Name_Link__c</columns>
    <columns>litify_pm__Client__c</columns>
    <columns>litify_pm__Case_Type__c</columns>
    <columns>litify_pm__Principal_Attorney__c</columns>
    <columns>litify_pm__Open_Date__c</columns>
    <columns>litify_pm__Pending_Date__c</columns>
    <columns>litify_pm__Moved_to_Litigation__c</columns>
    <columns>litify_pm__Statute_Of_Limitations__c</columns>
    <columns>litify_pm__Close_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>litify_pm__Moved_to_Litigation__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>litify_pm__Open_Date__c</field>
        <operation>lessThan</operation>
        <value>LAST_N_MONTHS:10</value>
    </filters>
    <label>Matters 10+Months Not Yet In Litigation</label>
</ListView>