unpackaged/main/default/objects/litify_pm__Matter__c/listViews/New_Moved_to_Litigation.listView-meta.xml
<ListView>
    <fullName>New_Moved_to_Litigation</fullName>
    <columns>litify_pm__lit_Display_Name_Link__c</columns>
    <columns>litify_pm__Client__c</columns>
    <columns>litify_pm__Case_Type__c</columns>
    <columns>litify_pm__Principal_Attorney__c</columns>
    <columns>litify_pm__Open_Date__c</columns>
    <columns>litify_pm__Pending_Date__c</columns>
    <columns>litify_pm__Statute_Of_Limitations__c</columns>
    <columns>litify_pm__Close_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>litify_pm__Moved_to_Litigation__c</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:14</value>
    </filters>
    <label>New Moved to Litigation</label>
</ListView>