unpackaged/main/default/objects/litify_pm__Matter__c/listViews/Turned_Down_Matters.listView-meta.xml
<ListView>
    <fullName>Turned_Down_Matters</fullName>
    <columns>litify_pm__lit_Display_Name_Link__c</columns>
    <columns>litify_pm__Client__c</columns>
    <columns>litify_pm__Case_Type__c</columns>
    <columns>litify_pm__Open_Date__c</columns>
    <columns>litify_pm__Lost_Reason__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>litify_pm__Lost_Reason__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Lost Matters</label>
</ListView>